--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
         "postcss": "^8.4.6",
         "postcss-import": "^14.0.1",
         "tailwindcss": "^3.0.23"
+    },
+    "dependencies": {
+        "tw-elements": "^1.0.0-alpha11"
     }
 }
