--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "tailwindcss": "^3.0.23"
     },
     "dependencies": {
+        "jquery": "^3.6.0",
+        "sweetalert": "^2.1.2",
         "tw-elements": "^1.0.0-alpha11"
     }
 }
