--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
+    "/js/tailwind-element.js": "/js/tailwind-element.js",
+    "/js/jquery.js": "/js/jquery.js",
+    "/js/sweetalert.js": "/js/sweetalert.js",
     "/css/app.css": "/css/app.css"
 }
