--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "jquery": "^3.6.0",
         "sweetalert": "^2.1.2",
+        "tinymce": "^5.10.3",
         "tw-elements": "^1.0.0-alpha11"
     }
 }
