--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,5 +4,22 @@
     "/js/jquery.js": "/js/jquery.js",
     "/js/sweetalert.js": "/js/sweetalert.js",
     "/js/tinymce.js": "/js/tinymce.js",
-    "/css/app.css": "/css/app.css"
+    "/css/style.css": "/css/style.css",
+    "/css/app.css": "/css/app.css",
+    "/font/Nunito-Black.ttf": "/font/Nunito-Black.ttf",
+    "/font/Nunito-BlackItalic.ttf": "/font/Nunito-BlackItalic.ttf",
+    "/font/Nunito-Bold.ttf": "/font/Nunito-Bold.ttf",
+    "/font/Nunito-BoldItalic.ttf": "/font/Nunito-BoldItalic.ttf",
+    "/font/Nunito-ExtraBold.ttf": "/font/Nunito-ExtraBold.ttf",
+    "/font/Nunito-ExtraBoldItalic.ttf": "/font/Nunito-ExtraBoldItalic.ttf",
+    "/font/Nunito-ExtraLight.ttf": "/font/Nunito-ExtraLight.ttf",
+    "/font/Nunito-ExtraLightItalic.ttf": "/font/Nunito-ExtraLightItalic.ttf",
+    "/font/Nunito-Italic.ttf": "/font/Nunito-Italic.ttf",
+    "/font/Nunito-Light.ttf": "/font/Nunito-Light.ttf",
+    "/font/Nunito-LightItalic.ttf": "/font/Nunito-LightItalic.ttf",
+    "/font/Nunito-Medium.ttf": "/font/Nunito-Medium.ttf",
+    "/font/Nunito-MediumItalic.ttf": "/font/Nunito-MediumItalic.ttf",
+    "/font/Nunito-Regular.ttf": "/font/Nunito-Regular.ttf",
+    "/font/Nunito-SemiBold.ttf": "/font/Nunito-SemiBold.ttf",
+    "/font/Nunito-SemiBoldItalic.ttf": "/font/Nunito-SemiBoldItalic.ttf"
 }
