sidebar + feather icon + breadcumb

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,7 +4,7 @@
     "/js/jquery.js": "/js/jquery.js",
     "/js/sweetalert.js": "/js/sweetalert.js",
     "/js/tinymce.js": "/js/tinymce.js",
-    "/css/style.css": "/css/style.css",
+    "/js/feather-icons.js": "/js/feather-icons.js",
     "/css/app.css": "/css/app.css",
     "/font/Nunito-Black.ttf": "/font/Nunito-Black.ttf",
     "/font/Nunito-BlackItalic.ttf": "/font/Nunito-BlackItalic.ttf",
