--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "tailwindcss": "^3.0.23"
     },
     "dependencies": {
+        "feather-icons": "^4.28.0",
         "jquery": "^3.6.0",
         "sweetalert": "^2.1.2",
         "tinymce": "^5.10.3",
