--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -5,6 +5,7 @@
     "/js/sweetalert.js": "/js/sweetalert.js",
     "/js/tinymce.js": "/js/tinymce.js",
     "/js/feather-icons.js": "/js/feather-icons.js",
+    "/js/darkmode.js": "/js/darkmode.js",
     "/css/app.css": "/css/app.css",
     "/font/Nunito-Black.ttf": "/font/Nunito-Black.ttf",
     "/font/Nunito-BlackItalic.ttf": "/font/Nunito-BlackItalic.ttf",
