--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "feather-icons": "^4.28.0",
+        "flowbite": "^1.3.4",
         "jquery": "^3.6.0",
         "sweetalert": "^2.1.2",
         "tinymce": "^5.10.3",
