--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -7,6 +7,7 @@
     "/js/feather-icons.js": "/js/feather-icons.js",
     "/js/darkmode.js": "/js/darkmode.js",
     "/js/flowbite.js": "/js/flowbite.js",
+    "/js/aos.js": "/js/aos.js",
     "/css/app.css": "/css/app.css",
     "/font/Nunito-Black.ttf": "/font/Nunito-Black.ttf",
     "/font/Nunito-BlackItalic.ttf": "/font/Nunito-BlackItalic.ttf",
