--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "tailwindcss": "^3.0.23"
     },
     "dependencies": {
+        "aos": "^2.3.4",
         "feather-icons": "^4.28.0",
         "flowbite": "^1.3.4",
         "jquery": "^3.6.0",
