loading effect in admin

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -8,6 +8,9 @@
     "/js/darkmode.js": "/js/darkmode.js",
     "/js/flowbite.js": "/js/flowbite.js",
     "/js/aos.js": "/js/aos.js",
+    "/js/loader.js": "/js/loader.js",
+    "/css/loader.css": "/css/loader.css",
+    "/css/style.css": "/css/style.css",
     "/css/app.css": "/css/app.css",
     "/font/Nunito-Black.ttf": "/font/Nunito-Black.ttf",
     "/font/Nunito-BlackItalic.ttf": "/font/Nunito-BlackItalic.ttf",
