change font to cdn

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -9,23 +9,7 @@
     "/js/flowbite.js": "/js/flowbite.js",
     "/js/aos.js": "/js/aos.js",
     "/js/loader.js": "/js/loader.js",
-    "/css/loader.css": "/css/loader.css",
     "/css/style.css": "/css/style.css",
-    "/css/app.css": "/css/app.css",
-    "/font/Nunito-Black.ttf": "/font/Nunito-Black.ttf",
-    "/font/Nunito-BlackItalic.ttf": "/font/Nunito-BlackItalic.ttf",
-    "/font/Nunito-Bold.ttf": "/font/Nunito-Bold.ttf",
-    "/font/Nunito-BoldItalic.ttf": "/font/Nunito-BoldItalic.ttf",
-    "/font/Nunito-ExtraBold.ttf": "/font/Nunito-ExtraBold.ttf",
-    "/font/Nunito-ExtraBoldItalic.ttf": "/font/Nunito-ExtraBoldItalic.ttf",
-    "/font/Nunito-ExtraLight.ttf": "/font/Nunito-ExtraLight.ttf",
-    "/font/Nunito-ExtraLightItalic.ttf": "/font/Nunito-ExtraLightItalic.ttf",
-    "/font/Nunito-Italic.ttf": "/font/Nunito-Italic.ttf",
-    "/font/Nunito-Light.ttf": "/font/Nunito-Light.ttf",
-    "/font/Nunito-LightItalic.ttf": "/font/Nunito-LightItalic.ttf",
-    "/font/Nunito-Medium.ttf": "/font/Nunito-Medium.ttf",
-    "/font/Nunito-MediumItalic.ttf": "/font/Nunito-MediumItalic.ttf",
-    "/font/Nunito-Regular.ttf": "/font/Nunito-Regular.ttf",
-    "/font/Nunito-SemiBold.ttf": "/font/Nunito-SemiBold.ttf",
-    "/font/Nunito-SemiBoldItalic.ttf": "/font/Nunito-SemiBoldItalic.ttf"
+    "/css/loader.css": "/css/loader.css",
+    "/css/app.css": "/css/app.css"
 }
