minify assets css and js

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,31 +1,15 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/js/tailwind-element.js": "/js/tailwind-element.js",
-    "/js/jquery.js": "/js/jquery.js",
-    "/js/sweetalert.js": "/js/sweetalert.js",
-    "/js/tinymce.js": "/js/tinymce.js",
-    "/js/feather-icons.js": "/js/feather-icons.js",
-    "/js/darkmode.js": "/js/darkmode.js",
-    "/js/flowbite.js": "/js/flowbite.js",
-    "/js/aos.js": "/js/aos.js",
-    "/js/loader.js": "/js/loader.js",
-    "/css/loader.css": "/css/loader.css",
-    "/css/style.css": "/css/style.css",
-    "/css/app.css": "/css/app.css",
-    "/font/Nunito-Black.ttf": "/font/Nunito-Black.ttf",
-    "/font/Nunito-BlackItalic.ttf": "/font/Nunito-BlackItalic.ttf",
-    "/font/Nunito-Bold.ttf": "/font/Nunito-Bold.ttf",
-    "/font/Nunito-BoldItalic.ttf": "/font/Nunito-BoldItalic.ttf",
-    "/font/Nunito-ExtraBold.ttf": "/font/Nunito-ExtraBold.ttf",
-    "/font/Nunito-ExtraBoldItalic.ttf": "/font/Nunito-ExtraBoldItalic.ttf",
-    "/font/Nunito-ExtraLight.ttf": "/font/Nunito-ExtraLight.ttf",
-    "/font/Nunito-ExtraLightItalic.ttf": "/font/Nunito-ExtraLightItalic.ttf",
-    "/font/Nunito-Italic.ttf": "/font/Nunito-Italic.ttf",
-    "/font/Nunito-Light.ttf": "/font/Nunito-Light.ttf",
-    "/font/Nunito-LightItalic.ttf": "/font/Nunito-LightItalic.ttf",
-    "/font/Nunito-Medium.ttf": "/font/Nunito-Medium.ttf",
-    "/font/Nunito-MediumItalic.ttf": "/font/Nunito-MediumItalic.ttf",
-    "/font/Nunito-Regular.ttf": "/font/Nunito-Regular.ttf",
-    "/font/Nunito-SemiBold.ttf": "/font/Nunito-SemiBold.ttf",
-    "/font/Nunito-SemiBoldItalic.ttf": "/font/Nunito-SemiBoldItalic.ttf"
+    "/js/app.js": "/js/app.js?id=dcb4f5483d4c11ecf0ed40fdbec8fe0b",
+    "/js/tailwind-element.js": "/js/tailwind-element.js?id=ed87199a111afc7845ad1f26d560a8f0",
+    "/js/jquery.js": "/js/jquery.js?id=893bf20ca072763a2f3106712ff76190",
+    "/js/sweetalert.js": "/js/sweetalert.js?id=5b28742545d381a330992078511f67f8",
+    "/js/tinymce.js": "/js/tinymce.js?id=f5eac0f6a7b5dffa01e149d8d91578df",
+    "/js/feather-icons.js": "/js/feather-icons.js?id=c4ee66aefeea5b44d7f230ea475630d7",
+    "/js/darkmode.js": "/js/darkmode.js?id=44cbb60b84e4f0cc9f5b70d3ec9cb6ca",
+    "/js/flowbite.js": "/js/flowbite.js?id=0e33051e9205554979ff337c6a567796",
+    "/js/aos.js": "/js/aos.js?id=4cf072826740b8dfdff7213b4171ee4a",
+    "/js/loader.js": "/js/loader.js?id=390f126a073e228c0c5658c9c01a59c7",
+    "/css/style.css": "/css/style.css?id=40c7715ccc9ef3d7c7d6e34fa6eb91b8",
+    "/css/loader.css": "/css/loader.css?id=0004b26d89a91e2d5c42a5c0819c9b18",
+    "/css/app.css": "/css/app.css?id=763767fd7a5c22df47df18af6e1f2378"
 }
